Restore the "Offline" option in presence combobox

There is no valid reason to show the option but do nothing on activated.

Reviewed By: akulichalexander

BUG: 404350